# alligator

./: README.md
mesos_allocation_go_module/: Makefile.am  README.md  aclocal.m4  allocator.proto  allocator_server.cpp  allocator_server.hpp  client.cpp  client.hpp  configure.ac  go_allocator.cpp  go_hook.cpp  hook_server.cpp  hook_server.hpp  server.cpp  server.hpp
mesos_allocation_go_module/curlpp/: Makefile  Makefile.in  config.status  curlpp-config  curlpp.pc  libtool
mesos_allocation_go_module/curlpp/doc/: Makefile
mesos_allocation_go_module/curlpp/examples/: Makefile  example01  example02  example03  example04  example05  example06  example07  example08  example09  example10  example11  example12  example13  example14  example15  example16  example17  example18  example19  example20  example21  example22  example23  example24
mesos_allocation_go_module/curlpp/examples/.deps/: example01.Po  example02.Po  example03.Po  example04.Po  example05.Po  example06.Po  example07.Po  example08.Po  example09.Po  example10.Po  example11.Po  example12.Po  example13.Po  example14.Po  example15.Po  example16.Po  example17.Po  example18.Po  example19.Po  example20.Po  example21.Po  example22.Po  example23.Po  example24.Po
mesos_allocation_go_module/curlpp/include/: Makefile
mesos_allocation_go_module/curlpp/include/curlpp/: Makefile  config.h  config.win32.h  stamp-h1
mesos_allocation_go_module/curlpp/include/curlpp/internal/: Makefile
mesos_allocation_go_module/curlpp/include/utilspp/: Makefile
mesos_allocation_go_module/curlpp/include/utilspp/functor/: Makefile
mesos_allocation_go_module/curlpp/include/utilspp/singleton/: Makefile
mesos_allocation_go_module/curlpp/src/: Makefile
mesos_allocation_go_module/curlpp/src/curlpp/: Form.cpp  Makefile
mesos_allocation_go_module/curlpp/src/curlpp/.deps/: Easy.Plo  Exception.Plo  Form.Plo  Info.Plo  (+4 more)
mesos_allocation_go_module/curlpp/src/utilspp/: Makefile
mesos_allocation_go_module/proxygen/proxygen/: configure.ac  libtool
mesos_allocation_go_module/proxygen/proxygen/httpserver/: HTTPServer.cpp  HTTPServer.h  RequestHandlerFactory.h
(+67 files in other folders)
